--- a/main.tex
+++ b/main.tex
@@ -252,12 +252,13 @@ with above conditions, we have to solve following
         Dadhichi Telwadkar & 20D070083 & 
         \ref{Sec:1},\ref{Sec:2}\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
          \hline
-         Samyak Ajmera & 19B080023 &
+         Sameer Parwani & 20D180029 &
         \ref{Sec:1},\ref{Sec:2},\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
          \hline
         Pratham Kingar & 200040075 & \ref{Sec:1},\ref{Sec:2},\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
          \hline
-         Sameer Parwani & 20D180029 & \ref{Sec:1},\ref{Sec:2},\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
+        Samyak Ajmera & 19B080023 &
+        \ref{Sec:1},\ref{Sec:2},\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
          \hline
         Aakash Jha & 200040002 & \ref{Sec:1},\ref{Sec:2},\ref{Sec:3},\ref{Sec:4},\ref{Sec:5}\\
         
